Validation and Hotel Admin Add property Step 1
